[STYLE] Prevent text from overflowing lesson <div>s
By using `word-wrap:break-word`. Big thanks to

    http://stackoverflow.com/questions/1165497/can-i-prevent-text-in-a-div-block-from-overflowing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -343,6 +343,7 @@ div.tab-content.hide {
   border: 2px solid black;
   padding: 2px;
   line-height: 1.2;
+  word-wrap: break-word;
 }
 
 .lesson-draggable-helper {
